# sciencebase_bulk_rdf

./: .gitignore  Dockerfile  README.md  catalog_item_types.py  catalog_types.py  main.py  pyproject.toml
.github/workflows/: push_to_ghcr.yml
src/: catalog_item_to_rdf.py  catalog_item_types.py  main.py
